--- a/Folder html/intex.html
+++ b/Folder html/intex.html
@@ -6,13 +6,55 @@
     <title>Viaggio a Londra</title>
 </head>
 <body>
-    <header>
+    <header>  <!-- Titolo -->
         <h1>Il mio viaggio a Londra</h1>
         <img src="img/pexels-bill-emrich-230794-0.jpg" alt="image London part 1">
         <img src="img/pexels-bill-emrich-230794-1.jpg" alt="image London part 2">
         <img src="img/pexels-bill-emrich-230794-2.jpg" alt="image London part 3">
         <hr>
     </header>
+ 
+    <main>
+        <h2>Le mie spese</h2>
+                <!-- Tabella -->
+        <table>
+            <thead>
+                <tr>
+                    <th>Numero</th>
+                    <th>Descrizione</th>
+                    <th>Costo</th>
+                </tr>      
+            </thead>
+                <!-- Tabella riga 1 -->
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120€</td>
+                </tr>
+                <!-- Tabella riga 2 -->
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo 2</td>
+                    <td>150€</td>
+                </tr>
+                <!-- Tabella riga 3 -->
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo 3</td>
+                    <td>145€</td>
+                </tr>
+            </tbody>
+            <!-- Tabella di chiusura -->
+            <tfoot>
+                <tr>
+                    <td>Totale</td>
+                    <td></td>
+                    <td>415€</td>
+                </tr>
+            </tfoot>
+        </table>
+    </main>
 
 </body>
 </html>
