Inserimento cose da fare

--- a/Folder html/intex.html
+++ b/Folder html/intex.html
@@ -16,7 +16,7 @@
  
     <main>
         <h2>Le mie spese</h2>
-                <!-- Tabella -->
+                <!-- Parte 1: Tabella -->
         <table>
             <thead>
                 <tr>
@@ -54,7 +54,24 @@
                 </tr>
             </tfoot>
         </table>
+        <hr>
     </main>
+            <!-- Parte 2 -->
+    <section>
+        <h3>Cose da fare</h3>
+        <ul>
+            <li>Visitare la Tower of London &cross;</li>
+            <li>Visitare greenwich &check;</li>
+            <li>Ascoltare un artista di strada a Covent Garden &cross;</li>
+            <li>Mangiare il tipico Fish and Chips inglese &check;</li>
+        </ul>
+    </section>
+    <section>
+
+    </section>
+
+
+
 
 </body>
 </html>
