inserimento info utili

--- a/Folder html/intex.html
+++ b/Folder html/intex.html
@@ -65,9 +65,33 @@
             <li>Ascoltare un artista di strada a Covent Garden &cross;</li>
             <li>Mangiare il tipico Fish and Chips inglese &check;</li>
         </ul>
+        <hr>
     </section>
+            <!-- Parte 3 -->
     <section>
-
+        <h3>Info utili:</h3>
+        <ol>
+            <li>Numeri utili di emergenza
+                <ul>
+                    <li>999 - Emergenza</li>
+                    <li>101 - Numero polizia</li>
+                    <li>111 - Numero assistenza medica</li>
+                </ul>
+            </li>
+            <li>Hotel
+                <ul>
+                    <li>Nome hotel: Buckingham Palace</li>
+                    <li>Indirizzo hotel:Westminster, London SW1A 1AA, Regno Unito</li>
+                </ul>
+            </li>
+            <li>Aereo
+                <ul>
+                    <li>Volo di Andata: YI1234X, ore 9.30 da Milano Malpensa</li>
+                    <li>Volo di Ritorno: Y1236X, ore 18.30 da London Heathow</li>
+                </ul>
+            </li>
+        </ol>
+        <hr>
     </section>
 
 
