--- a/Folder html/index.html
+++ b/Folder html/index.html
@@ -73,21 +73,21 @@
         <ol>
             <li>Numeri utili di emergenza
                 <ul>
-                    <li>999 - Emergenza</li>
-                    <li>101 - Numero polizia</li>
-                    <li>111 - Numero assistenza medica</li>
+                    <li><strong>999</strong> - Emergenza</li>
+                    <li><strong>101</strong> - Numero polizia</li>
+                    <li><strong>111</strong> - Numero assistenza medica</li>
                 </ul>
             </li>
             <li>Hotel
                 <ul>
-                    <li>Nome hotel: Buckingham Palace</li>
-                    <li>Indirizzo hotel:Westminster, London SW1A 1AA, Regno Unito</li>
+                    <li><strong>Nome hotel</strong> : Buckingham Palace</li>
+                    <li><strong>Indirizzo hotel</strong> :Westminster, London SW1A 1AA, Regno Unito</li>
                 </ul>
             </li>
             <li>Aereo
                 <ul>
-                    <li>Volo di Andata: YI1234X, ore 9.30 da Milano Malpensa</li>
-                    <li>Volo di Ritorno: Y1236X, ore 18.30 da London Heathow</li>
+                    <li><strong>Volo di Andata</strong> : YI1234X, ore 9.30 da Milano Malpensa</li>
+                    <li><strong>Volo di Ritorno</strong> : Y1236X, ore 18.30 da London Heathow</li>
                 </ul>
             </li>
         </ol>
